# led-matrix

./: .gitignore  Cargo.toml  build.sh  main.py  pyproject.toml
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: main.rs
server/: Cargo.toml
server/src/: dual.rs  main.rs  matrix.rs  pattern.rs  server.rs  sim.rs  ws281x.rs
server/src/pattern/: clock.rs  conway.rs  gliders.rs  image.rs  life.rs  random.rs  snake.rs  trains.rs
src/: main.rs
