[project]
name = "matrix"
version = "0.1.0"
description = "server for self built led matrix"
authors = [
    {name = "Alexander Kampf"},
    {name = "Noah Hummel"}
]
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-neopixel (>=6.4.1,<7.0.0)",
    "adafruit-blinka (>=9.0.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
