[package]
name = "matrix-frontend"
version = "0.1.0"
edition = "2024"
description = "WASM control UI for the LED matrix"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Url",
    "File",
    "FileList",
    "Blob",
    "Event",
    "EventTarget",
    "PointerEvent",
    "WheelEvent",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
]
