[package]
name = "matrix-server"
version = "0.1.0"
edition = "2024"
description = "HTTP server controlling the LED matrix"

[dependencies]
rs_ws281x = "0.5"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }
urlencoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
